# asterics-board-editor

./: COPYING  README.md  pyproject.toml
.tx/: config
data/: se.danielnylander.asterics-board-editor.desktop
po/: LINGUAS  POTFILES.in  asterics-board-editor.pot
src/asterics_board_editor/: __init__.py  __main__.py  main.py  model.py  pictogram.py  preview.py  tts.py  window.py
